前端初版 初具人形

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.14.0",
     "react-router-dom": "^7.5.0",
     "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
